[proposal] Revive mouse gestures
@Eneen
Submitted by Alexander Pusz Link to original bug (#787921)
Description
I know Epiphany doesn't support extensions, but maybe it's possible to implement mouse gestures similarly to Opera. Currently:
- firefox has plugin
- chrome has plugin
- opera has build in option
- safari doesn't have plugin but macosx has system level options (I like it too, but easystroke for linux is outdated and unmaintained, maybe shell feature request?)
It's really must-have option for fast browsing on desktops without neither touchpad nor touchscreen but only mouse with 3 buttons. Current keyboard shortcut for forward-backward is alt+left/right. This forces user to move hand from mouse to access arrows and then back to mouse as you can't use one hand to activate this shortcut.
Version: 3.26.x