Add mouse gestures

Add mouse gestures using GtkEventControllerMotion with two functions:
  - Middle click + Move left = Go back
  - Middle click + Move right = Go forward
  - Middle click + Move down = Open a new tab
  - Middle click + Move up + Move down = Reload current tab
  - Middle click + Move down + Move right = Close current tab

Fixes: https://gitlab.gnome.org/GNOME/epiphany/issues/430